--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import jdk.jfr.Enabled
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.7'
@@ -36,4 +38,8 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+jar {
+    enabled = false
 }
